--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     font-size: 100px;
     color: khaki;
     text-align: center;
-    background-image: url(../images/pattern.jpeg);
+    background-image: url(./pattern.jpeg);
 }
 
 h2 {
