--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
     color: khaki;
     text-align: center;
     background-image: url(./pattern.jpeg);
+    margin: 0;
 }
 
 h2 {
@@ -42,4 +43,8 @@ a:hover {
 
 .product {
     text-align: center;
+}
+
+html {
+    padding-bottom: 26.56px;
 }
